# pawamoy-testing

./: .copier-answers.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  duties.py  index.html  mkdocs.yml  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  copier.yml  dists.yml  release.yml  wheels.yml
changelog/: index.html
code_of_conduct/: index.html
config/: coverage.ini  pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
credits/: index.html
docs/: changelog.md  command_line_usage.md  contributing.md  credits.md  index.md  insiders.yml
docs/.overrides/partials/: comments.html
docs/insiders/: changelog.md  index.md  installation.md
docs/reference/: api.md
license/: index.html
reference/api/: index.html
scripts/: gen_cli_data.py  gen_credits.py  insiders.py  make
src/pawamoy_testing/: __init__.py  __main__.py  cli.py  debug.py
src/pawamoy_testing/_internal/: cli.py  debug.py
tests/: __init__.py  test_api.py  test_cli.py
