[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pawamoy-testing"
description = "Testing this great template"
authors = [{name = "Timothee Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "Zlib"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://pawamoy.github.io/pawamoy-testing"
Documentation = "https://pawamoy.github.io/pawamoy-testing"
Changelog = "https://pawamoy.github.io/pawamoy-testing/changelog"
Repository = "https://github.com/pawamoy/pawamoy-testing"
Issues = "https://github.com/pawamoy/pawamoy-testing/issues"
Discussions = "https://github.com/pawamoy/pawamoy-testing/discussions"
Gitter = "https://gitter.im/pawamoy-testing/community"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
pawamoy-testing = "pawamoy_testing.cli:main"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
