[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pawamoy-testing"
description = "Testing this great template"
authors = [{name = "Timothee Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://pawamoy.github.io/pawamoy-testing"
Documentation = "https://pawamoy.github.io/pawamoy-testing"
Changelog = "https://pawamoy.github.io/pawamoy-testing/changelog"
Repository = "https://github.com/pawamoy/pawamoy-testing"
Issues = "https://github.com/pawamoy/pawamoy-testing/issues"
Discussions = "https://github.com/pawamoy/pawamoy-testing/discussions"
Gitter = "https://gitter.im/pawamoy-testing/community"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
pawamoy-testing = "pawamoy_testing.cli:main"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]

[tool.uv]
dev-dependencies = [
    # dev
    "editables>=0.5",

    # maintenance
    "build>=1.2",
    "git-changelog>=2.5",
    "twine>=5.0; python_version < '3.13'",

    # ci
    "duty>=1.4",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",

    # docs
    "black>=24.4",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.25",
    "tomli>=2.0; python_version < '3.11'",
]